[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minieda"
version = "0.1.0"
description = "A minimalist utility for exploratory data analysis using pandas DataFrames"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Dmitriy Bolotov"}
]
dependencies = [
  "pandas >= 2.0",
  "numpy>=1.21"
]

[project.urls]
"Source" = "https://github.com/dbolotov/minieda"
"Bug Tracker" = "https://github.com/dbolotov/minieda/issues"
