[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minieda"
version = "0.1.0"
description = "A minimalist package for exploratory data analysis using pandas DataFrames."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Dmitriy Bolotov"}
]
dependencies = [
  "pandas >= 2.0",
  "numpy>=1.21"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[project.urls]
"Source" = "https://github.com/dbolotov/minieda"
"Bug Tracker" = "https://github.com/dbolotov/minieda/issues"
